--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2015-rollup": "^3.0.0",
-    "babel-register": "^6.18.0",
     "eslint": "^5.4.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-formatter-pretty": "^1.1.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.1.0",
+    "esm": "^3.0.80",
     "jsdom": "^9.9.1",
     "rollup": "^0.39.0",
     "rollup-plugin-babel": "^2.7.1",
@@ -43,7 +43,7 @@
   "dependencies": {},
   "ava": {
     "require": [
-      "babel-register"
+      "esm"
     ]
   },
   "babel": {
