--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "devDependencies": {
     "ava": "^0.25.0",
     "babel-eslint": "^7.1.1",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-es2015-rollup": "^3.0.0",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^5.4.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-formatter-pretty": "^1.3.0",
@@ -48,7 +47,12 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      [
+        "env",
+        {
+          "modules": false
+        }
+      ]
     ]
   }
 }
