--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "eslint-plugin-standard": "^3.1.0",
     "esm": "^3.0.80",
     "jsdom": "^12.0.0",
-    "microbundle": "^0.6.0"
+    "microbundle": "^0.6.0",
+    "np": "^3.0.4"
   },
   "dependencies": {},
   "ava": {
