--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "module": "dist/sonar.mjs",
   "scripts": {
     "build": "microbundle --entry lib/sonar.js --name Sonar",
-    "eslint": "eslint --format=node_modules/eslint-formatter-pretty ./lib ./test; exit 0",
     "prepublish": "npm run build",
     "test": "ava",
     "test:watch": "ava --watch"
@@ -24,20 +23,29 @@
   },
   "devDependencies": {
     "ava": "^0.25.0",
-    "eslint": "^5.8.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-formatter-pretty": "^1.3.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
     "esm": "^3.0.84",
+    "husky": "^1.1.4",
     "jsdom": "^13.0.0",
     "microbundle": "^0.7.0",
-    "np": "^3.0.4"
+    "np": "^3.0.4",
+    "prettier": "^1.15.2",
+    "pretty-quick": "^1.8.0"
   },
   "dependencies": {},
   "ava": {
     "require": [
       "esm"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "printWidth": 100,
+    "semi": false,
+    "trailingComma": "all"
   }
 }
