--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "url": "https://github.com/brandonweiss/sonar-js.git"
   },
   "devDependencies": {
+    "@ava/babel": "^1.0.0",
     "ava": "^3.0.0",
     "esm": "^3.2.25",
     "husky": "^4.2.1",
@@ -32,11 +33,6 @@
     "pretty-quick": "^2.0.1"
   },
   "dependencies": {},
-  "ava": {
-    "require": [
-      "esm"
-    ]
-  },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
